# militia

./: .gitignore  PRODUCT.md
.github/workflows/: release.yml
.swarm/: memory.db  schema.sql
Excel tables/: CONTROL ADJUDICACIONES- DEPARTAMENTO SERVICIOS (6).xlsx  CONTROL LICITACIONES - DEPARTAMENTO SERVICIOS (6).xlsx  output-2.xlsx  output.txt
backend/core-api/: Cargo.toml  Dockerfile.api  Dockerfile.chat  Dockerfile.summarize  README.md
backend/core-api/migrations/: 20260608000000_initial_schema.sql  20260608010000_add_scraper_columns.sql  20260609010000_add_users.sql  20260609020000_seed_admin.sql  20260609030000_pipeline_teams.sql  20260609040000_ingram_workflow.sql  20260610010000_registration.sql  20260611000000_licitacion_documentos.sql  20260611100000_cotizacion_adjunto.sql  20260612000000_seed_cristina.sql  20260616000000_phase2_features.sql  20260616010000_add_va_con_pliego.sql  20260618000000_cotizacion_v2.sql  20260618010000_drop_old_licitacion_cliente_key.sql  20260618020000_chat_tables.sql  20260619000000_licitacion_ai_summary.sql  20260619010000_add_rechazada_stage.sql  20260622000000_backfill_cotizacion_user_id.sql  20260622010000_backfill_cotizacion_user_id_v2.sql  20260622020000_delete_null_fecha_limite.sql  20260622030000_cotizacion_ids.sql  20260625000000_alerta.sql  20260626000000_documento_source_url.sql  20260626010000_documento_manual.sql
backend/core-api/src/: auth.rs  http_handler.rs  lib.rs  main.rs
backend/core-api/src/routes/: adjudicaciones.rs  auth.rs  chat.rs  cotizacion_adjuntos.rs  documents.rs  licitaciones.rs  mod.rs  notes.rs  pipeline.rs  quotes.rs  register.rs  teams.rs  users.rs
backend/ingest_tenderstool/: handler.py
backend/scraper/: Dockerfile  db.py  parsers.py  requirements.txt  scraper.py
backend/scraper_fetch/: handler.py  portal.py
backend/scraper_write/: db.py  handler.py
brain/99c05582-0fde-46b2-b32c-06576ea23247/scratch/: reconstruct_clean.py
db/migrations/: 001_initial_schema.sql
frontend/: pubspec.yaml
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/api/: client.dart  models.dart
frontend/lib/data/: cat_tree.dart
frontend/lib/screens/: adjudicacion_detail_screen.dart  adjudicaciones_screen.dart  chat_history_screen.dart  chat_screen.dart  licitacion_detail_screen.dart  licitaciones_screen.dart  login_screen.dart  pdf_preview_screen.dart  register_screen.dart  splash_screen.dart
frontend/lib/screens/admin/: dashboard_screen.dart  equipo_screen.dart  mi_panel_admin_screen.dart
frontend/lib/screens/vendedor/: mi_panel_screen.dart  mis_licitaciones_screen.dart
frontend/lib/services/: auth_service.dart  update_service.dart
frontend/lib/widgets/: liti_chat_overlay.dart  pipeline_badge.dart  skeleton_tile.dart
frontend/linux/flutter/: generated_plugins.cmake
frontend/macos/Flutter/: GeneratedPluginRegistrant.swift
frontend/macos/Runner/: DebugProfile.entitlements
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/windows/: CMakeLists.txt  installer.iss
frontend/windows/flutter/: generated_plugins.cmake
frontend/windows/runner/: Runner.rc  main.cpp
infra/: package-lock.json  package.json
infra/lib/: infra-stack.ts
scripts/: backfill.py  release_macos.sh  release_windows.ps1  set_portal_creds.sh
