[package]
name = "core-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[[bin]]
name = "chat-stream"
path = "src/bin/chat_stream.rs"

[[bin]]
name = "summarize"
path = "src/bin/summarize.rs"

[dependencies]
# HTTP server (replaces lambda_http runtime — kept for Request/Response/Body types)
axum = { version = "0.7", features = ["macros"] }
lambda_http = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "uuid"] }

# Azure Blob Storage
azure_storage = "0.20"
azure_storage_blobs = "0.20"
azure_core = "0.20"
time = { version = "0.3", features = ["formatting"] }

# HTTP client (Anthropic API + scraper HTTP calls)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# Auth
jsonwebtoken = "9"
bcrypt = "0.16"
uuid = { version = "1", features = ["v4"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
pdf-extract = "0.10.0"
zip = { version = "2", default-features = false, features = ["deflate"] }
